# libvisdesk

./: CHANGELOG.md  Cargo.toml  README.md  cbindgen.toml  libvisdesk.h
examples/: basic.rs
examples/msvcpp/: libvisdesk-test.cpp  libvisdesk-test.sln  libvisdesk-test.vcxproj  libvisdesk-test.vcxproj.filters
src/: ffi.rs  instance.rs  lib.rs  types.rs
src/visibility/: calculator.rs  desktop.rs  mod.rs  region.rs
src/win/: events.rs  mod.rs  monitor.rs  window.rs
src/win_callbacks/: events.rs  mod.rs  monitors.rs  windows.rs
