[package]
name = "libvisdesk"
version = "0.1.1"
edition = "2024"
license = "MIT"
readme = "README.md"
description = " Simple library for detecting the visible (unoccluded) desktop area per monitor on Windows, accounting for cloaked windows and taskbars."
repository = "https://github.com/dnetguru/libvisdesk"
keywords = ["windows", "gdi", "visibility", "occluded"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Accessibility", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_UI_Shell", "Win32_Graphics_Dwm", "Win32_UI_HiDpi"] }
log = "0.4.27"
env_logger = "0.11.8"
tokio = { version = "1.36", features = ["time", "rt", "rt-multi-thread", "sync"] }
