[package]
name = "libvisdesk"
version = "0.1.5"
edition = "2024"
license = "MIT"
readme = "README.md"
description = " Simple library for detecting the visible (unoccluded) desktop area per monitor on Windows, accounting for cloaked windows and taskbars."
repository = "https://github.com/dnetguru/libvisdesk"
keywords = ["windows", "gdi", "visibility", "occluded"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Accessibility", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_UI_Shell", "Win32_Graphics_Dwm", "Win32_UI_HiDpi"] }
tokio = { version = "1.36", features = ["time", "rt", "rt-multi-thread", "sync"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
